Bug #62956: fixing private method signature validation

In inheritance, if both methods are private, don not enforce the same
signature.